--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,104 +4,195 @@ on:
   push:
     branches: [ main ]
     paths:
-      - '**.go'      # Go代码文件变更
-      - 'go.mod'     # 依赖变更
-      - 'go.sum'     # 依赖变更
-  pull_request:
-    branches: [ main ]
-    paths:
-      - '**.go'      # Go代码文件变更
-      - 'go.mod'     # 依赖变更
-      - 'go.sum'     # 依赖变更
+      - '**.go'
+      - 'go.mod'
+      - 'go.sum'
   workflow_dispatch:
-    # 允许手动触发工作流
-    inputs:
-      force_tag:
-        description: '强制创建新标签'
-        required: false
-        default: 'false'
-        type: boolean
 
 jobs:
   test-and-tag:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # 获取所有历史记录和标签
+          fetch-depth: 0
 
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v4
         with:
-          go-version: '1.24.2' # 使用与go.mod中相同的版本
-          check-latest: true
+          go-version: '1.24'
 
       - name: Run tests
         run: go test -v ./...
 
-      - name: Check for code changes
-        id: check_changes
+      - name: Check for version update in commit
+        id: check_version
         run: |
-          # 检查是否有Go代码文件变更
-          CHANGED_GO_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -E '\.go$' | wc -l)
-          echo "go_files_changed=$CHANGED_GO_FILES" >> $GITHUB_OUTPUT
-          
-          # 检查是否有依赖变更
-          CHANGED_DEP_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -E 'go\.mod|go\.sum' | wc -l)
-          echo "dep_files_changed=$CHANGED_DEP_FILES" >> $GITHUB_OUTPUT
-          
-          # 确定是否需要更新版本号
-          if [[ "$CHANGED_GO_FILES" -gt 0 || "$CHANGED_DEP_FILES" -gt 0 || "${{ github.event.inputs.force_tag }}" == 'true' ]]; then
-            echo "update_version=true" >> $GITHUB_OUTPUT
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          if echo "$COMMIT_MSG" | grep -E 'update version to|bump version|version:'; then
+            VERSION=$(echo "$COMMIT_MSG" | grep -oE 'v[0-9]+\.[0-9]+\.[0-9]+-[0-9]{8}')
+            if [ ! -z "$VERSION" ]; then
+              echo "has_version_update=true" >> $GITHUB_OUTPUT
+              echo "commit_version=$VERSION" >> $GITHUB_OUTPUT
+              echo "Found version update in commit: $VERSION"
+            fi
           else
-            echo "update_version=false" >> $GITHUB_OUTPUT
+            echo "has_version_update=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Update version in code from commit
+        if: steps.check_version.outputs.has_version_update == 'true'
+        id: update_from_commit
+        run: |
+          VERSION=${{ steps.check_version.outputs.commit_version }}
+          CURRENT_VERSION=$(grep -oE 'Version = "v[0-9]+\.[0-9]+\.[0-9]+-[0-9]{8}"' tool.go | grep -oE 'v[0-9]+\.[0-9]+\.[0-9]+-[0-9]{8}' || echo "")
+          
+          echo "Current version in code: $CURRENT_VERSION"
+          echo "Version from commit: $VERSION"
+          
+          if [ "$CURRENT_VERSION" != "$VERSION" ]; then
+            sed -i "s/Version = \".*\"/Version = \"$VERSION\"/" tool.go
+            
+            git config --local user.email "action@github.com"
+            git config --local user.name "GitHub Action"
+            git add tool.go
+            git commit -m "Update version to $VERSION [skip ci]"
+            git push
+            echo "updated=true" >> $GITHUB_OUTPUT
+            echo "Version updated to $VERSION"
+          else
+            echo "updated=false" >> $GITHUB_OUTPUT
+            echo "Version is already up to date"
+          fi
+
+      - name: Check if latest commit has a tag
+        id: check_tag
+        run: |
+          LATEST_COMMIT=$(git rev-parse HEAD)
+          TAG_AT_COMMIT=$(git tag --points-at $LATEST_COMMIT)
+          
+          if [ -z "$TAG_AT_COMMIT" ]; then
+            echo "has_tag=false" >> $GITHUB_OUTPUT
+          else
+            echo "has_tag=true" >> $GITHUB_OUTPUT
+            echo "tag=$TAG_AT_COMMIT" >> $GITHUB_OUTPUT
+            echo "Found tag at current commit: $TAG_AT_COMMIT"
           fi
 
       - name: Get current date
         id: date
-        if: steps.check_changes.outputs.update_version == 'true' || github.event_name == 'workflow_dispatch'
+        if: steps.check_version.outputs.has_version_update != 'true' && steps.check_tag.outputs.has_tag != 'true'
         run: echo "date=$(date +'%Y%m%d')" >> $GITHUB_OUTPUT
 
       - name: Get latest tag
-        id: get_latest_tag
-        if: steps.check_changes.outputs.update_version == 'true' || github.event_name == 'workflow_dispatch'
+        id: latest_tag
+        if: steps.check_version.outputs.has_version_update != 'true' && steps.check_tag.outputs.has_tag != 'true'
         run: |
-          # 获取最新的标签
-          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-          echo "latest_tag=$LATEST_TAG" >> $GITHUB_OUTPUT
+          git fetch --tags
+          LATEST_TAG=$(git tag -l "v*" --sort=-v:refname | head -n 1)
           
-          # 提取版本号部分
-          VERSION=$(echo $LATEST_TAG | grep -oP 'v\d+\.\d+\.\d+' || echo "v0.0.0")
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          if [ -z "$LATEST_TAG" ]; then
+            echo "tag=v0.0.0" >> $GITHUB_OUTPUT
+          else
+            echo "tag=$LATEST_TAG" >> $GITHUB_OUTPUT
+          fi
           
-          # 提取主版本号、次版本号和修订号
-          MAJOR=$(echo $VERSION | cut -d. -f1 | sed 's/v//')
-          MINOR=$(echo $VERSION | cut -d. -f2)
-          PATCH=$(echo $VERSION | cut -d. -f3)
-          echo "major=$MAJOR" >> $GITHUB_OUTPUT
-          echo "minor=$MINOR" >> $GITHUB_OUTPUT
-          echo "patch=$PATCH" >> $GITHUB_OUTPUT
+          echo "Latest tag: $LATEST_TAG"
 
       - name: Create new tag
-        id: create_tag
-        if: steps.check_changes.outputs.update_version == 'true' || github.event_name == 'workflow_dispatch'
+        id: new_tag
+        if: steps.check_version.outputs.has_version_update != 'true' && steps.check_tag.outputs.has_tag != 'true'
         run: |
-          # 增加修订号
-          MAJOR=${{ steps.get_latest_tag.outputs.major }}
-          MINOR=${{ steps.get_latest_tag.outputs.minor }}
-          PATCH=$((${{ steps.get_latest_tag.outputs.patch }} + 1))
+          LATEST_TAG=${{ steps.latest_tag.outputs.tag }}
+          DATE=${{ steps.date.outputs.date }}
           
-          # 创建新标签
-          NEW_TAG="v$MAJOR.$MINOR.$PATCH-${{ steps.date.outputs.date }}"
-          echo "new_tag=$NEW_TAG" >> $GITHUB_OUTPUT
+          # Extract version components
+          if [[ $LATEST_TAG =~ v([0-9]+)\.([0-9]+)\.([0-9]+) ]]; then
+            MAJOR=${BASH_REMATCH[1]}
+            MINOR=${BASH_REMATCH[2]}
+            PATCH=${BASH_REMATCH[3]}
+            
+            # Increment patch version
+            NEW_PATCH=$((PATCH + 1))
+            NEW_TAG="v$MAJOR.$MINOR.$NEW_PATCH-$DATE"
+            
+            echo "new_tag=$NEW_TAG" >> $GITHUB_OUTPUT
+            echo "New tag: $NEW_TAG"
+          else
+            NEW_TAG="v0.0.1-$DATE"
+            echo "new_tag=$NEW_TAG" >> $GITHUB_OUTPUT
+            echo "New tag: $NEW_TAG"
+          fi
+
+      - name: Update version in code (no tag)
+        id: update_version
+        if: steps.check_version.outputs.has_version_update != 'true' && steps.check_tag.outputs.has_tag != 'true'
+        run: |
+          NEW_TAG=${{ steps.new_tag.outputs.new_tag }}
+          CURRENT_VERSION=$(grep -oE 'Version = "v[0-9]+\.[0-9]+\.[0-9]+-[0-9]{8}"' tool.go | grep -oE 'v[0-9]+\.[0-9]+\.[0-9]+-[0-9]{8}' || echo "")
           
-          # 配置Git
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          echo "Current version in code: $CURRENT_VERSION"
+          echo "New version: $NEW_TAG"
           
-          # 创建并推送标签
+          if [ "$CURRENT_VERSION" != "$NEW_TAG" ]; then
+            sed -i "s/Version = \".*\"/Version = \"$NEW_TAG\"/" tool.go
+            
+            git config --local user.email "action@github.com"
+            git config --local user.name "GitHub Action"
+            git add tool.go
+            git commit -m "Update version to $NEW_TAG"
+            echo "updated=true" >> $GITHUB_OUTPUT
+            echo "Version updated to $NEW_TAG"
+          else
+            echo "updated=false" >> $GITHUB_OUTPUT
+            echo "Version is already up to date"
+          fi
+
+      - name: Update version in code (with tag)
+        id: update_version_with_tag
+        if: steps.check_version.outputs.has_version_update != 'true' && steps.check_tag.outputs.has_tag == 'true'
+        run: |
+          TAG=${{ steps.check_tag.outputs.tag }}
+          CURRENT_VERSION=$(grep -oE 'Version = "v[0-9]+\.[0-9]+\.[0-9]+-[0-9]{8}"' tool.go | grep -oE 'v[0-9]+\.[0-9]+\.[0-9]+-[0-9]{8}' || echo "")
+          
+          echo "Current version in code: $CURRENT_VERSION"
+          echo "Tag version: $TAG"
+          
+          if [ "$CURRENT_VERSION" != "$TAG" ]; then
+            # 删除旧标签
+            git tag -d $TAG
+            git push origin :refs/tags/$TAG
+            
+            # 更新版本号
+            sed -i "s/Version = \".*\"/Version = \"$TAG\"/" tool.go
+            
+            # 提交更改
+            git config --local user.email "action@github.com"
+            git config --local user.name "GitHub Action"
+            git add tool.go
+            git commit -m "Update version to $TAG"
+            
+            # 在新提交上创建标签
+            git tag $TAG
+            
+            # 推送更改和标签
+            git push
+            git push origin $TAG
+            
+            echo "updated=true" >> $GITHUB_OUTPUT
+            echo "Version updated to $TAG and tag moved to new commit"
+          else
+            echo "updated=false" >> $GITHUB_OUTPUT
+            echo "Version is already up to date"
+          fi
+
+      - name: Push tag
+        if: steps.check_version.outputs.has_version_update != 'true' && steps.check_tag.outputs.has_tag != 'true' && steps.update_version.outputs.updated == 'true'
+        run: |
+          NEW_TAG=${{ steps.new_tag.outputs.new_tag }}
           git tag $NEW_TAG
-          git push origin $NEW_TAG
-          
-          echo "Successfully created and pushed tag: $NEW_TAG"
+          git push --tags
+          git push
