chore: 更新.gitignore并添加插件测试任务
在.gitignore中添加*.tool.plugin忽略规则
在Makefile中添加测试任务
在CI工作流中添加插件测试步骤

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,12 @@ jobs:
       - name: Run tests
         run: go test -v ./...
 
+      - name: Run plugin tests
+        run: |
+          cd plugin/example
+          make run
+          cd ../..
+
       # ============================================================
       # 步骤4: 检查提交是否涉及代码文件
       # ============================================================
